# dssp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  GNUmakefile.in  LICENSE  README.md  changelog  configure  configure.ac  mkdssp.1  package.json  webpack.config.js
.github/workflows/: build-documentation.yml  cmake-multi-platform.yml
cmake/: AddGitSubmodule.cmake  FindFilesystem.cmake  VersionString.cmake  dsspConfig.cmake.in  libdssp.pc.in  revision.hpp.in
config/m4/: ax_filesystem.m4  ax_libcifpp.m4  ax_mrc.m4  ax_z_bz2.m4
config/test/: iostreams-bzip2-test.cpp  iostreams-zlib-test.cpp
config/tools/: m4esc.sh
doc/: CMakeLists.txt  mkdssp.1  mkdssp.html  mkdssp.md
docroot/: about.html  download.html  error.html  footer.html  head.html  index.html  licence.html  license.html  menu.html
include/: dssp.hpp
libconfig/: CMakeLists.txt  README.md  changelog
libconfig/cmake/: libconfigConfig.cmake  libconfigConfig.cmake.in
libconfig/include/: cfg.hpp
libconfig/include/cfg/: text.hpp  utilities.hpp
libconfig/test/: unit-test.conf  unit-test.cpp
libdssp/: CMakeLists.txt
libdssp/cmake/: dsspConfig.cmake.in
libdssp/src/: dssp-io.cpp  dssp-io.hpp  dssp.cpp
mmcif_pdbx/: dssp-extension.dic
msvc/: mkdssp.sln  mkdssp.vcxproj  mkdssp.vcxproj.filters
src/: DSSP.cpp  DSSP.hpp  config.hpp.in  dssp-io.cpp  dssp-io.hpp  dssp-server.cpp  dssp.cpp  dssp.hpp  dssp_wrapper.cpp  dssp_wrapper.hpp  mkdssp.cpp  mkdssp.hpp  pr-main.cpp  queue.hpp  revision.hpp.in
test/: 1cbs-dssp-test.tsv  1cbs-dssp.cif  1cbs.dssp  CMakeLists.txt  dssp-test.cpp  dssp-unit-test.cpp  unit-test-dssp.cpp  unit-test.cpp
tools/: depends.cmd
webapp/: index.js  pdb-redo-style.scss
